Added functions for Fragmentation action [WIP]
Improved ReportPlotter:
- Beter plot layout
- Data loading happens outside the class
- Added to GillespieSimulation

Moved load_config.py to utils for cleaner config folder

Small remeaning cleanups

--- a/src/configs/cell_config.yaml
+++ b/src/configs/cell_config.yaml
@@ -1,9 +1,11 @@
-SPORE_AMOUNT: 10
+SPORE_AMOUNT: 1
 CELL_SEGMENT_LENGTH: 1
 GROWTH_SPEED: 10
 ANGLE_DEVIATION_PER_MICRON: 20
-CROWDING_SLOPE_STEEPNESS: 10
-CROWDING_INTENSITY: 0.05
+CROWDING_SLOPE_STEEPNESS: 8
+CROWDING_INTENSITY: 0.01
 ERROR_TOLERANCE: 0.001
 TROPISM_INTENSITY: 0
 TROPISM_BEND_PER_MICRON: 20
+FRAGMENT_THRESHOLD: 200
+FRAGMENT_RATE: 0.001
